actualización de titulo de cuanto cobrar

--- a/app.html
+++ b/app.html
@@ -237,7 +237,7 @@
         </fieldset>
         <fieldset>
         <div id="liquido">
-          <legend class="action">Cuanto debes cobrar</legend>
+          <legend class="action">Cuanto debes cobrar en mi boleta</legend>
         </div>
           <section>
            
